--- a/guides.html
+++ b/guides.html
@@ -7,13 +7,13 @@
 
     <title>GremlinJS - Guides</title>
 
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
 
-    <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
-    <link rel="apple-touch-icon" sizes="57x57" href="img/apple-touch-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="img/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon" href="img/apple-touch-icon.png"/>
+    <link rel="apple-touch-icon" sizes="57x57" href="img/apple-touch-icon-57x57.png"/>
+    <link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png"/>
+    <link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png"/>
+    <link rel="apple-touch-icon" sizes="144x144" href="img/apple-touch-icon-144x144.png"/>
 
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 
@@ -22,7 +22,7 @@
     <script src='js/flatdoc/flatdoc.js'></script>
 
     <!-- Flatdoc theme -->
-    <link  href='css/flatdoc-white.css' rel='stylesheet'>
+    <link href='css/flatdoc-white.css' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" href="css/site.css">
     <script src='js/flatdoc/script.js'></script>
     <script src='js/site.js'></script>
@@ -31,14 +31,8 @@
     <meta content="GremlinJS" property="og:title">
     <meta content="web components the easy way" name="description">
 
-    <!-- Initializer -->
-    <script>
-        Flatdoc.run({
-            fetcher: Flatdoc.file('src/guides.md')
-        });
-    </script>
 </head>
-<body role='flatdoc' class='no-literate big-h3 large-brief'>
+<body role='flatdoc' class='no-literate big-h3 large-brief' data-gremlin="Flatdoc" data-flatdoc-src="src/guides.md">
 
 <div id="site-nav" class='header'>
     <div class='left'>
@@ -50,41 +44,23 @@
         </ul>
     </div>
     <div class='right'>
-        <ul>
-            <li><a href='https://github.com/grmlin/gremlinjs'>View on GitHub</a></li>
-        </ul>
-        <!-- GitHub buttons: see http://ghbtns.com -->
-        <!--<iframe src="http://ghbtns.com/github-btn.html?user=grmlin&repo=gremlinjs&type=watch&count=true&size=large"
-                allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
-        <iframe src="http://ghbtns.com/github-btn.html?user=grmlin&repo=gremlinjs&type=fork&count=false&size=large"
-                allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
-        <iframe src="http://ghbtns.com/github-btn.html?user=grmlin&amp;repo=gremlinjs&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>-->
+        <iframe src="http://ghbtns.com/github-btn.html?user=grmlin&repo=gremlinjs&type=watch&count=true"
+                allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
     </div>
 </div>
 
 <div class='content-root'>
     <div class='menubar'>
         <div class='menu section' role='flatdoc-menu'></div>
-        
+
     </div>
     <a class="top-link" href="#"></a>
+
     <div role='flatdoc-content' class='content'></div>
 </div>
 
-<footer>
-    <div class="container">
-        <div class="row">
-            <div class="span4">
-                <span>Andreas Wehr 2013</span>
-            </div>
-            <div class="span3 offset5 text-right">
-                <a href="#">github</a>
-                <a href="#">twitter</a>
-                <a href="#">google+</a>
-            </div>
-        </div>
-    </div>
-</footer>
+<script src="build/latest/gremlin.min.js"></script>
+<script src="js/gremlins/Flatdoc.js"></script>
 
 </body>
 </html>
