--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <title>GremlinJS - web components the easy way</title>
     <link href='css/flatdoc-white.css' rel='stylesheet'>
+
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css"/>
     <link rel="stylesheet" href="css/main.css"/>
