--- a/guides.html
+++ b/guides.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
 
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>GremlinJS - Guides</title>
 
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
