--- a/api.html
+++ b/api.html
@@ -69,6 +69,7 @@
             <div class='menubar'>
                 <div class='menu section' role='flatdoc-menu'></div>
             </div>
+            <a class="top-link" href="#"></a>
         </div>
         <div class="span9">
             <div role='flatdoc-content' class='content'></div>
