renaming gremlin.js

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>GremlinJS - web components the easy way</title>
+    <title>gremlin.js - cuddly javascript components</title>
     <link href='css/flatdoc-white.css' rel='stylesheet'>
 
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -33,7 +33,7 @@
 
 <div id="site-nav" class='header'>
     <div class='left'>
-        <h1 class="current"><a href="index.html">GremlinJS</a></h1>
+        <h1 class="current"><a href="index.html">gremlin.js</a></h1>
         <ul>
             <li><a href='guides.html'>Guides</a></li>
             <li><a href="api.html">API Reference</a></li>
@@ -60,10 +60,10 @@
 
                 <div class="logo">
                     <div class="span5">
-                        <img src="img/logo.png" alt="GremlinJS Logo"/>
+                        <img src="img/logo.png" alt="gremlin.js Logo"/>
                     </div>
                     <div class="span7">
-                        <h1>Gremlin<span>JS</span>
+                        <h1>GREMLIN<span>.JS</span>
                             <small><em>cuddly</em> javascript components</small>
                         </h1>
                     </div>
