--- a/api.html
+++ b/api.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-    <title>GremlinJS - API Reference</title>
+    <title>gremlin.js - API Reference</title>
 
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
 
@@ -33,7 +33,7 @@
     <script src='js/site.js'></script>
 
     <!-- Meta -->
-    <meta content="GremlinJS" property="og:title">
+    <meta content="gremlin.js" property="og:title">
     <meta content="web components the easy way" name="description">
 
     <!-- Initializer -->
@@ -43,7 +43,7 @@
 
 <div id="site-nav" class='header'>
     <div class='left'>
-        <h1><a href="index.html">GremlinJS</a></h1>
+        <h1><a href="index.html">gremlin.js</a></h1>
         <ul>
             <li><a href='guides.html'>Guides</a></li>
             <li class="current"><a>API Reference</a></li>
