--- a/examples.html
+++ b/examples.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>GremlinJS - Examples</title>
+    <title>gremlin.js - Examples</title>
 
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
 
@@ -34,7 +34,7 @@
     <script src='js/site.js'></script>
 
     <!-- Meta -->
-    <meta content="GremlinJS" property="og:title">
+    <meta content="gremlin.js" property="og:title">
     <meta content="web components the easy way" name="description">
 
 </head>
@@ -42,7 +42,7 @@
 
 <div id="site-nav" class='header'>
     <div class='left'>
-        <h1><a href="index.html">GremlinJS</a></h1>
+        <h1><a href="index.html">gremlin.js</a></h1>
         <ul>
             <li><a href="guides.html">Guides</a></li>
             <li><a href="api.html">API Reference</a></li>
