--- a/index.html
+++ b/index.html
@@ -40,25 +40,16 @@
             <li><a href="examples.html">Examples</a></li>
         </ul>
     </div>
-
     <div class='right'>
-        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://grml.in" data-text="GREMLIN.JS, cuddly javascript components" data-via="hardwehr" data-hashtags="gremlinjs"></a>
-        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-
-        <!-- Place this tag where you want the +1 button to render. -->
-        <div class="g-plusone" data-size="medium"></div>
-
-        <!-- Place this tag after the last +1 button tag. -->
-        <script type="text/javascript">
-            (function() {
-                var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-                po.src = 'https://apis.google.com/js/plusone.js';
-                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-            })();
-        </script>
-
-        <iframe src="http://ghbtns.com/github-btn.html?user=grmlin&repo=gremlinjs&type=watch&count=true"
-                allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
+        <div class="ghbtn">
+            <a class="icon-github" href="https://github.com/grmlin"></a>
+        </div>
+        <div class="ghbtn">
+            <a class="icon-twitter" href="https://twitter.com/hardwehr"></a>
+        </div>
+        <div class="ghbtn">
+            <a class="icon-google-plus" href="https://plus.google.com/u/0/104634813875212534057"></a>
+        </div>
     </div>
 </div>
 
@@ -79,7 +70,7 @@
                     </div>
                 </div>
 
-                </div>
+            </div>
         </div>
     </div>
 
@@ -94,6 +85,26 @@
             <a class="btn btn-primary btn-large download-button" href="build/latest/gremlin.min.js">Download</a>
             <span class="download-info muted"><strong>v0.4.0</strong> ~4k minified and gzipped</span>
         </div>
+    </div>
+
+    <div class="text-center buffered">
+        <iframe src="http://ghbtns.com/github-btn.html?user=grmlin&repo=gremlinjs&type=watch&count=true&size=small"
+                allowtransparency="true" frameborder="0" scrolling="0" width="140" height="20"></iframe>
+
+        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://grml.in" data-text="GREMLIN.JS, cuddly javascript components" data-via="hardwehr" data-size="small" data-hashtags="gremlinjs">Tweet</a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
+        <!-- Place this tag where you want the +1 button to render. -->
+        <div class="g-plusone" data-size="medium"></div>
+
+        <!-- Place this tag after the last +1 button tag. -->
+        <script type="text/javascript">
+            (function() {
+                var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+                po.src = 'https://apis.google.com/js/plusone.js';
+                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+            })();
+        </script>
     </div>
 
     <div class="container">
@@ -118,29 +129,13 @@
             <div class="span5">
                 <div class="pull-right">
                     <div class="ghbtn">
-                        <iframe src="http://ghbtns.com/github-btn.html?user=grmlin&type=follow&count=true"
-                                allowtransparency="true" frameborder="0" scrolling="0" width="165" height="20"></iframe>
+                        <a class="icon-github" href="https://github.com/grmlin"></a>
                     </div>
                     <div class="ghbtn">
-                        <a href="https://twitter.com/hardwehr" class="twitter-follow-button" data-show-count="false" data-lang="de">@hardwehr folgen</a>
-                        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+                        <a class="icon-twitter" href="https://twitter.com/hardwehr"></a>
                     </div>
                     <div class="ghbtn">
-                        <!-- Place this tag where you want the widget to render. -->
-                        <div class="g-follow" data-annotation="bubble" data-height="20"
-                             data-href="//plus.google.com/104634813875212534057" data-rel="author"></div>
-
-                        <!-- Place this tag after the last widget tag. -->
-                        <script type="text/javascript">
-                            (function () {
-                                var po = document.createElement('script');
-                                po.type = 'text/javascript';
-                                po.async = true;
-                                po.src = 'https://apis.google.com/js/plusone.js';
-                                var s = document.getElementsByTagName('script')[0];
-                                s.parentNode.insertBefore(po, s);
-                            })();
-                        </script>
+                        <a class="icon-google-plus" href="https://plus.google.com/u/0/104634813875212534057"></a>
                     </div>
                 </div>
             </div>
