--- a/guides.html
+++ b/guides.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html itemscope itemtype="http://schema.org/Product">
 <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -7,6 +7,11 @@
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta itemprop="name" content="GREMLIN.JS">
+    <meta itemprop="description" content="A dependency-free library to build Javascript components.">
+    <meta itemprop="image" content="http://grml.in/img/logo.png">
+
 
     <title>gremlin.js - Guides</title>
 
@@ -32,10 +37,6 @@
     <link rel="stylesheet" type="text/css" href="css/site.css">
     <script src='js/flatdoc/script.js'></script>
     <script src='js/site.js'></script>
-
-    <!-- Meta -->
-    <meta content="gremlin.js guides" property="og:title">
-    <meta content="web components the easy way" name="description">
 
 </head>
 <body role='flatdoc' class='no-literate big-h3 large-brief' data-gremlin="Flatdoc" data-flatdoc-src="src/guides.md">
