--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
-<html>
+<!-- Ergänzen Sie das html-Tag um die Attribute "itemscope" und "itemtype". -->
+<html itemscope itemtype="http://schema.org/Product">
+
+
 <head>
     <title>gremlin.js - cuddly javascript components</title>
     <link href='css/flatdoc-white.css' rel='stylesheet'>
+
+    <meta itemprop="name" content="GREMLIN.JS">
+    <meta itemprop="description" content="A dependency-free library to build Javascript components.">
+    <meta itemprop="image" content="http://grml.in/img/logo.png">
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
